2010-12-17  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QWebPage sends out a RequestSoftwareInputPanel event
        incorrectly in particular case
        https://bugs.webkit.org/show_bug.cgi?id=50419

        Add HitTestResult check before firing RequestSoftwareInputPanel event.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::mouseReleaseEvent):
        (QWebPagePrivate::handleSoftwareInputPanel):
        * Api/qwebpage_p.h:
        * tests/qwebpage/tst_qwebpage.cpp:
        (clickOnPage):
        (tst_QWebPage::inputMethods):

Canonical link: https://commits.webkit.org/64590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74243 268f45cc-cd09-0410-ab3c-d52691b4dbfc