WebKit/qt/Api/qwebpage_p.h
@@ -125,7 +125,7 @@ public:
     void shortcutOverrideEvent(QKeyEvent*);
     void leaveEvent(QEvent*);
     void handleClipboard(QEvent*, Qt::MouseButton);
-    void handleSoftwareInputPanel(Qt::MouseButton);
+    void handleSoftwareInputPanel(Qt::MouseButton, const QPoint&);
     bool handleScrolling(QKeyEvent*, WebCore::Frame*);
 
     // Returns whether the default action was cancelled in the JS event handler
